--- a/CDwebV1/about.html
+++ b/CDwebV1/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stl.css">
     <style>
       input[type=text] {
