--- a/CDwebV1/display.html
+++ b/CDwebV1/display.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>Display Results</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stl.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <style>
       input[type=text] {
         width: 100%;
@@ -29,20 +30,23 @@
       </nav>
     </header>
     <main>
-      <div class="Chart-titles">
-        <div id="cur-chart-title">
+      <div id='disp-result'>
+        <p id='disp2'></p>
+      </div>
+      <div class="chartTitles">
+        <div id="curChartTitle">
           <p>Current Market Listings</p>
         </div>
-        <div id="his-chart-title">
+        <div id="hisChartTitle">
           <p>Historical Values</p>
         </div>
       </div>
       <div class="Charts">
         <div class="Current">
-          <canvas id="curchart" width="400" height="400"></canvas>
+          <canvas id="curchart" width="400" height="350"></canvas>
         </div>
         <div class="Historic">
-          <canvas id="hischart" width="400" height="400"></canvas>
+          <canvas id="hischart" width="400" height="350"></canvas>
         </div>
       </div>
     </main>
