--- a/CDwebV1/index.html
+++ b/CDwebV1/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stl.css">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <style>
     input[type=text] {
       width: 100%;
@@ -36,13 +38,14 @@
             <select id="make" onclick="getMake()">
               <option value="Ferrari">Ferrari</option>
               <option value="Lamborghini">Lamborghini</option>
+              <option value="Mclaren">Mclaren</option>
             </select>
             <select id="model" onclick="getModel()">
               <option value="allModels">All Models</option>
             </select>
           </div>
         </form>
-        <a href="display.html" class="search">
+        <a class="search">
           <button type="submit" id="search" onclick="search()">Search</button>
         </a>
       </div>
@@ -55,9 +58,28 @@
       <p>Model: </p>
       <p id=result2></p>
     </div>
-    <div class="text-logo">
-      <div class="logo-border">
+    <div id="text-logo">
+      <div id="logo-border">
               <p>&nbspT R E&nbsp</p>
+      </div>
+    </div>
+    <div id='disp-result'>
+      <p id='disp2'>Please select a car above</p>
+    </div>
+    <div class="chartTitles">
+      <div id="curChartTitle">
+        <p>Current Market Listings</p>
+      </div>
+      <div id="hisChartTitle">
+        <p>Historical Values</p>
+      </div>
+    </div>
+    <div class="Charts">
+      <div class="Current">
+        <canvas id="curchart" width="600" height="500"></canvas>
+      </div>
+      <div class="Historic">
+        <canvas id="hischart" width="600" height="500"></canvas>
       </div>
     </div>
     <div class="spacer">
